✨ Add change password functionality
