# backend/HotelManagement.WebApi/Controllers/UserController.cs
@@ -86,4 +86,31 @@ public class UserController(IFileStorageService _storageService) : Controller
             _ => TypedResults.BadRequest("No user logged in")
         };
     }
+
+    [HttpGet("password/{id}")]
+    public async Task<Results<Ok<string>, NotFound, BadRequest>> GetPassword(
+       Guid id,
+       [FromServices] IQueryHandler<GetUserPasswordQuery, string> queryService,
+       CancellationToken cancellationToken)
+    {
+        return await queryService.ExecuteAsync(new GetUserPasswordQuery(id), cancellationToken) switch
+        {
+            { } result => TypedResults.Ok(result),
+            _ => TypedResults.NotFound()
+        };
+    }
+
+
+    [HttpPatch("password")]
+    public async Task<Results<Ok<Guid>, BadRequest>> UpdatePassword(
+       [FromBody] UpdateUserPasswordCommand command,
+       [FromServices] ICommandHandler<UpdateUserPasswordCommand, Guid?> commandHandler,
+       CancellationToken cancellationToken)
+    {
+        return await commandHandler.ExecuteAsync(command, cancellationToken) switch
+        {
+            { } id => TypedResults.Ok(id),
+            _ => TypedResults.BadRequest()
+        };
+    }
 }
